--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -9,7 +9,15 @@
     "from scipy.io import loadmat\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import sys\n",
     "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "\n",
+    "basedir = os.path.abspath(os.path.join(cwd, os.pardir))\n",
+    "sys.path.insert(0, basedir)\n",
+    "\n",
     "\n",
     "plt.rcParams.update({\n",
     "    'figure.figsize': (16, 4),\n",
@@ -17,8 +25,7 @@
     "    'lines.linewidth': 1.5\n",
     "})\n",
     "\n",
-    "dir = os.getcwd()\n",
-    "datadir = os.path.join(dir, 'vessel_data/CSAD')\n",
+    "datadir = os.path.join(basedir, 'vessel_data/CSAD')\n",
     "files = os.listdir(datadir)\n",
     "filepaths = [os.path.join(datadir, f) for f in files if f.endswith('.mat')]\n",
     "\n",
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +76,7 @@
        "(47, 36)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +106,7 @@
        "10.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 0.0181\n"
+      "Execution time of _full_qtf: 0.0170\n"
      ]
     }
    ],
@@ -150,26 +157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.86661285e-05 7.53133833e-05 1.50644336e-04 ... 1.17775596e+03\n",
-      "  4.99703573e+02 8.93651359e+01]\n",
-      " [7.53133833e-05 1.01960638e-04 1.77291591e-04 ... 1.17775599e+03\n",
-      "  4.99703600e+02 8.93651625e+01]\n",
-      " [1.50644336e-04 1.77291591e-04 2.52622544e-04 ... 1.17775607e+03\n",
-      "  4.99703675e+02 8.93652379e+01]\n",
+      "[[1.74824926e-03 2.79718314e-03 4.54245880e-03 ... 2.02929098e+00\n",
+      "  1.32182174e+00 1.32182174e+00]\n",
+      " [2.79718314e-03 4.47546796e-03 7.26789337e-03 ... 3.24684739e+00\n",
+      "  2.11490294e+00 2.11490294e+00]\n",
+      " [4.54245880e-03 7.26789337e-03 1.18026259e-02 ... 5.27268675e+00\n",
+      "  3.43447639e+00 3.43447639e+00]\n",
       " ...\n",
-      " [1.17775596e+03 1.17775599e+03 1.17775607e+03 ... 2.35551188e+03\n",
-      "  1.67745949e+03 1.26712105e+03]\n",
-      " [4.99703573e+02 4.99703600e+02 4.99703675e+02 ... 1.67745949e+03\n",
-      "  9.99407097e+02 5.89068660e+02]\n",
-      " [8.93651359e+01 8.93651625e+01 8.93652379e+01 ... 1.26712105e+03\n",
-      "  5.89068660e+02 1.78730223e+02]]\n"
+      " [2.02929098e+00 3.24684739e+00 5.27268675e+00 ... 2.35551188e+03\n",
+      "  1.53431264e+03 1.53431264e+03]\n",
+      " [1.32182174e+00 2.11490294e+00 3.43447639e+00 ... 1.53431264e+03\n",
+      "  9.99407097e+02 9.99407097e+02]\n",
+      " [1.32182174e+00 2.11490294e+00 3.43447639e+00 ... 1.53431264e+03\n",
+      "  9.99407097e+02 9.99407097e+02]]\n"
      ]
     }
    ],
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +206,7 @@
        "       2.35551188e+03, 9.99407097e+02, 1.78730223e+02])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +227,7 @@
        "       [1., 1.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "Result: 1327.2243838296745\n",
-      "Execution time 2.9938220977783203 [ms]\n"
+      "Execution time 6.951808929443359 [ms]\n"
      ]
     }
    ],
@@ -293,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +308,7 @@
      "output_type": "stream",
      "text": [
       "Result: 1327.2243838296747\n",
-      "Execution time: 74.45 [ms]\n"
+      "Execution time: 50.89 [ms]\n"
      ]
     }
    ],
@@ -321,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +338,7 @@
        "       [1.000000e+00, 6.123234e-17]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
