Update csad notebook

--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "cwd = os.getcwd()\n",
     "\n",
     "basedir = os.path.abspath(os.path.join(cwd, os.pardir))\n",
-    "sys.path.insert(0, basedir)\n",
+    "# sys.path.insert(0, basedir)\n",
     "\n",
     "\n",
     "datadir = os.path.join(basedir, 'vessel_data/CSAD')\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(47, 36)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,23 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of 'full_qtf_alt': 0.0019855499267578125\n",
-      "Execution time of 'full_qtf': 0.0598301887512207\n",
+      "Execution time of 'full_qtf_alt': 0.0059812068939208984\n",
+      "Execution time of 'full_qtf': 0.05334663391113281\n",
       "Result diff: 0.0\n",
-      "Execution time of 'full_qtf': 0.05086517333984375\n",
-      "Execution time of 'full_qtf': 0.0498654842376709\n",
-      "Execution time of 'full_qtf': 0.04996299743652344\n",
-      "Execution time of 'full_qtf': 0.05884361267089844\n",
-      "Execution time of 'full_qtf': 0.05189347267150879\n",
-      "Execution time of 'full_qtf': 0.052825212478637695\n",
-      "Execution time of 'full_qtf_6dof': 0.3212411403656006\n"
+      "Execution time of 'full_qtf': 0.04890561103820801\n",
+      "Execution time of 'full_qtf': 0.05086684226989746\n",
+      "Execution time of 'full_qtf': 0.048865556716918945\n",
+      "Execution time of 'full_qtf': 0.043993473052978516\n",
+      "Execution time of 'full_qtf': 0.03889656066894531\n",
+      "Execution time of 'full_qtf': 0.03886079788208008\n",
+      "Execution time of 'full_qtf_6dof': 0.2744154930114746\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "       4.64502815e+01, 4.64502815e+01])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "(47, 36)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "       4.630203 , 5.297796 , 6.196435 , 7.453363 , 9.363913 ])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of _full_qtf_6dof: 0.0080\n"
+      "Execution time of _full_qtf_6dof: 0.0050\n"
      ]
     },
     {
@@ -803,7 +803,7 @@
        "           0.00000000e+00,  0.00000000e+00,  0.00000000e+00]]]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,21 +820,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of 'full_qtf': 0.060837507247924805\n",
-      "Execution time of 'full_qtf': 0.05285906791687012\n",
-      "Execution time of 'full_qtf': 0.051024675369262695\n",
-      "Execution time of 'full_qtf': 0.039418697357177734\n",
-      "Execution time of 'full_qtf': 0.04228377342224121\n",
-      "Execution time of 'full_qtf': 0.040888309478759766\n",
-      "Execution time of 'full_qtf_6dof': 0.2942941188812256\n",
-      "Execution time of _full_qtf_6dof: 0.0050\n"
+      "Execution time of 'full_qtf': 0.05388379096984863\n",
+      "Execution time of 'full_qtf': 0.05020260810852051\n",
+      "Execution time of 'full_qtf': 0.05013084411621094\n",
+      "Execution time of 'full_qtf': 0.03889203071594238\n",
+      "Execution time of 'full_qtf': 0.044881582260131836\n",
+      "Execution time of 'full_qtf': 0.04411745071411133\n",
+      "Execution time of 'full_qtf_6dof': 0.2880520820617676\n",
+      "Execution time of _full_qtf_6dof: 0.0030\n"
      ]
     },
     {
@@ -843,7 +843,7 @@
        "0.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "(6, 47, 36)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
