Update file structure
- Make waves module

--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -25,7 +25,8 @@
     "cwd = os.getcwd()\n",
     "\n",
     "basedir = os.path.abspath(os.path.join(cwd, os.pardir))\n",
-    "# sys.path.insert(0, basedir)\n",
+    "if basedir not in sys.path:\n",
+    "    sys.path.insert(0, basedir)\n",
     "\n",
     "\n",
     "datadir = os.path.join(basedir, 'vessel_data/CSAD')\n",
@@ -97,16 +98,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of 'full_qtf_alt': 0.0059812068939208984\n",
-      "Execution time of 'full_qtf': 0.05334663391113281\n",
+      "Execution time of 'full_qtf_alt': 0.0059854984283447266\n",
+      "Execution time of 'full_qtf': 0.06585049629211426\n",
       "Result diff: 0.0\n",
-      "Execution time of 'full_qtf': 0.04890561103820801\n",
-      "Execution time of 'full_qtf': 0.05086684226989746\n",
-      "Execution time of 'full_qtf': 0.048865556716918945\n",
-      "Execution time of 'full_qtf': 0.043993473052978516\n",
-      "Execution time of 'full_qtf': 0.03889656066894531\n",
-      "Execution time of 'full_qtf': 0.03886079788208008\n",
-      "Execution time of 'full_qtf_6dof': 0.2744154930114746\n"
+      "Execution time of 'full_qtf': 0.05286097526550293\n",
+      "Execution time of 'full_qtf': 0.05388498306274414\n",
+      "Execution time of 'full_qtf': 0.04983353614807129\n",
+      "Execution time of 'full_qtf': 0.04887247085571289\n",
+      "Execution time of 'full_qtf': 0.041925668716430664\n",
+      "Execution time of 'full_qtf': 0.04085111618041992\n",
+      "Execution time of 'full_qtf_6dof': 0.29321956634521484\n"
      ]
     }
    ],
@@ -263,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wave_loads import WaveLoad"
+    "from waves.wave_loads import WaveLoad"
    ]
   },
   {
@@ -275,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of _full_qtf_6dof: 0.0050\n"
+      "Execution time of _full_qtf_6dof: 0.0070\n"
      ]
     },
     {
@@ -827,14 +828,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of 'full_qtf': 0.05388379096984863\n",
-      "Execution time of 'full_qtf': 0.05020260810852051\n",
-      "Execution time of 'full_qtf': 0.05013084411621094\n",
-      "Execution time of 'full_qtf': 0.03889203071594238\n",
-      "Execution time of 'full_qtf': 0.044881582260131836\n",
-      "Execution time of 'full_qtf': 0.04411745071411133\n",
-      "Execution time of 'full_qtf_6dof': 0.2880520820617676\n",
-      "Execution time of _full_qtf_6dof: 0.0030\n"
+      "Execution time of 'full_qtf': 0.06681990623474121\n",
+      "Execution time of 'full_qtf': 0.06582403182983398\n",
+      "Execution time of 'full_qtf': 0.06685161590576172\n",
+      "Execution time of 'full_qtf': 0.045848846435546875\n",
+      "Execution time of 'full_qtf': 0.053853750228881836\n",
+      "Execution time of 'full_qtf': 0.05189251899719238\n",
+      "Execution time of 'full_qtf_6dof': 0.35508227348327637\n",
+      "Execution time of _full_qtf_6dof: 0.0060\n"
      ]
     },
     {
