--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -16,7 +16,8 @@
     "cwd = os.getcwd()\n",
     "\n",
     "basedir = os.path.abspath(os.path.join(cwd, os.pardir))\n",
-    "sys.path.insert(0, basedir)\n",
+    "if basedir not in sys.path:\n",
+    "    sys.path.insert(0, basedir)\n",
     "\n",
     "\n",
     "plt.rcParams.update({\n",
@@ -122,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wave_loads import WaveLoad"
+    "from waves.wave_loads import WaveLoad"
    ]
   },
   {
@@ -147,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of _full_qtf: 0.0170\n"
+      "Execution time of _full_qtf: 0.0189\n"
      ]
     }
    ],
@@ -255,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "Result: 1327.2243838296745\n",
-      "Execution time 6.951808929443359 [ms]\n"
+      "Execution time 5.985736846923828 [ms]\n"
      ]
     }
    ],
@@ -308,7 +309,7 @@
      "output_type": "stream",
      "text": [
       "Result: 1327.2243838296747\n",
-      "Execution time: 50.89 [ms]\n"
+      "Execution time: 54.85 [ms]\n"
      ]
     }
    ],
