--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -470,22 +470,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(6, 6)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
     }
    ],
    "source": [
-    "np.asarray(vesseldata['Bv']).shape"
+    "print(np.argmax(D[3, 3, :]))\n"
    ]
   },
   {
@@ -753,12 +750,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.sqrt(g44/(vesseldata['Mrb'][3][3][0] + vesseldata['A'][3][3][0]))"
+    "w44 = np.sqrt(g44/(vesseldata['MRB'][3][3] + vesseldata['A'][3][3][ind]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind = np.argmin(np.abs(freqs - w44))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.109343"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs[ind]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7487717262334666"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b44_est = 2*np.pi*np.sqrt(vesseldata['MRB']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.10479847,\n",
+       " 0.12575836,\n",
+       " 0.15719758,\n",
+       " 0.16547081,\n",
+       " 0.17466334,\n",
+       " 0.18493785,\n",
+       " 0.19649614,\n",
+       " 0.20283501,\n",
+       " 0.20959598,\n",
+       " 0.21682324,\n",
+       " 0.22456698,\n",
+       " 0.23288409,\n",
+       " 0.24184093,\n",
+       " 0.25151506,\n",
+       " 0.2619943,\n",
+       " 0.27338579,\n",
+       " 0.28581193,\n",
+       " 0.29942209,\n",
+       " 0.31439325,\n",
+       " 0.33094004,\n",
+       " 0.34932542,\n",
+       " 0.36987409,\n",
+       " 0.39299107,\n",
+       " 0.41919017,\n",
+       " 0.44913241,\n",
+       " 0.48368078,\n",
+       " 0.52398747,\n",
+       " 0.57162279,\n",
+       " 0.62878501,\n",
+       " 0.69864959,\n",
+       " 0.78598118,\n",
+       " 0.89826459,\n",
+       " 1.0479736,\n",
+       " 1.0841116,\n",
+       " 1.1520419,\n",
+       " 1.2295353,\n",
+       " 1.3176535,\n",
+       " 1.4200189,\n",
+       " 1.5388752,\n",
+       " 1.6803411,\n",
+       " 1.8493646,\n",
+       " 2.0561934,\n",
+       " 2.3168159,\n",
+       " 2.6508615,\n",
+       " 3.100512,\n",
+       " 3.7294428,\n",
+       " 4.6854243]"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vesseldata['roll']['veres'][0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
