--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -1072,6 +1072,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.    , -0.0608, -0.1216, ..., -2.8576, -2.9184, -2.9792],\n",
+       "       [ 0.0608,  0.    , -0.0608, ..., -2.7968, -2.8576, -2.9184],\n",
+       "       [ 0.1216,  0.0608,  0.    , ..., -2.736 , -2.7968, -2.8576],\n",
+       "       ...,\n",
+       "       [ 2.8576,  2.7968,  2.736 , ...,  0.    , -0.0608, -0.1216],\n",
+       "       [ 2.9184,  2.8576,  2.7968, ...,  0.0608,  0.    , -0.0608],\n",
+       "       [ 2.9792,  2.9184,  2.8576, ...,  0.1216,  0.0608,  0.    ]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(wave_freqs[:, None] - wave_freqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
