--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -105,16 +105,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of 'full_qtf_alt': 0.001992940902709961\n",
-      "Execution time of 'full_qtf': 0.08380508422851562\n",
+      "Execution time of 'full_qtf_alt': 0.0\n",
+      "Execution time of 'full_qtf': 0.10452699661254883\n",
       "Result diff: 0.0\n",
-      "Execution time of 'full_qtf': 0.06984353065490723\n",
-      "Execution time of 'full_qtf': 0.06881356239318848\n",
-      "Execution time of 'full_qtf': 0.07477331161499023\n",
-      "Execution time of 'full_qtf': 0.05186128616333008\n",
-      "Execution time of 'full_qtf': 0.0668172836303711\n",
-      "Execution time of 'full_qtf': 0.05884528160095215\n",
-      "Execution time of 'full_qtf_6dof': 0.39693689346313477\n"
+      "Execution time of 'full_qtf': 0.07275748252868652\n",
+      "Execution time of 'full_qtf': 0.06411147117614746\n",
+      "Execution time of 'full_qtf': 0.07370281219482422\n",
+      "Execution time of 'full_qtf': 0.05130910873413086\n",
+      "Execution time of 'full_qtf': 0.05476832389831543\n",
+      "Execution time of 'full_qtf': 0.04448199272155762\n",
+      "Execution time of 'full_qtf_6dof': 0.36597371101379395\n"
      ]
     }
    ],
@@ -291,9 +291,9 @@
      "text": [
       "c:\\Users\\j-ehy\\OneDrive - NTNU\\NTNU\\9 semester\\ProsjektOppgave\\wavemodel\\Wave-Model\\vessel_data\\CSAD\\vessel_json.json\n",
       "50\n",
-      "Execution time of _full_qtf_6dof: 0.0055\n",
+      "Execution time of _full_qtf_6dof: 0.0103\n",
       "50\n",
-      "Execution time of _full_qtf_6dof: 0.0040\n"
+      "Execution time of _full_qtf_6dof: 0.0065\n"
      ]
     },
     {
@@ -831,7 +831,7 @@
     "\n",
     "print(vessel._config_file)\n",
     "\n",
-    "waveload = WaveLoad(amps, wave_freqs, phase, headings, vessel._config_file)\n",
+    "waveload = WaveLoad(amps, wave_freqs, phase, angles, vessel._config_file)\n",
     "waveload._full_qtf_6dof(headings, freqs, QTFs)"
    ]
   },
@@ -844,15 +844,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of 'full_qtf': 0.06953763961791992\n",
-      "Execution time of 'full_qtf': 0.06354236602783203\n",
-      "Execution time of 'full_qtf': 0.06668353080749512\n",
-      "Execution time of 'full_qtf': 0.056360483169555664\n",
-      "Execution time of 'full_qtf': 0.05481529235839844\n",
-      "Execution time of 'full_qtf': 0.05382227897644043\n",
-      "Execution time of 'full_qtf_6dof': 0.37071681022644043\n",
+      "Execution time of 'full_qtf': 0.07849574089050293\n",
+      "Execution time of 'full_qtf': 0.07392048835754395\n",
+      "Execution time of 'full_qtf': 0.06547904014587402\n",
+      "Execution time of 'full_qtf': 0.06037163734436035\n",
+      "Execution time of 'full_qtf': 0.052338600158691406\n",
+      "Execution time of 'full_qtf': 0.057015180587768555\n",
+      "Execution time of 'full_qtf_6dof': 0.39646482467651367\n",
       "50\n",
-      "Execution time of _full_qtf_6dof: 0.0078\n"
+      "Execution time of _full_qtf_6dof: 0.0069\n"
      ]
     },
     {
@@ -904,7 +904,7 @@
      "output_type": "stream",
      "text": [
       "50\n",
-      "Execution time of _full_qtf_6dof: 0.0080\n"
+      "Execution time of _full_qtf_6dof: 0.0107\n"
      ]
     }
    ],
@@ -925,12 +925,12 @@
      "output_type": "stream",
      "text": [
       "50\n",
-      "Execution time of _full_qtf_6dof: 0.0070\n"
+      "Execution time of _full_qtf_6dof: 0.0091\n"
      ]
     }
    ],
    "source": [
-    "vessel_specific_waveload = WaveLoad(amps, wave_freqs, phase, np.zeros(len(freqs)), vessel._config_file)"
+    "vessel_specific_waveload = WaveLoad(amps, wave_freqs, phase, np.zeros(len(wave_freqs)), vessel._config_file)"
    ]
   },
   {
@@ -1024,14 +1024,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of second_order_loads: 0.0030\n"
+      "Execution time of second_order_loads: 0.0077\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ 5.93133403e+04,  8.96838951e-03,  0.00000000e+00,  0.00000000e+00,\n",
-       "        0.00000000e+00, -1.25976778e-03])"
+       "array([ 4.06176884e+03,  6.14105906e-04,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00, -1.05303372e-04])"
       ]
      },
      "execution_count": 20,
@@ -1045,34 +1045,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.06122449, 0.12244898, 0.18367347, 0.24489796,\n",
-       "       0.30612245, 0.36734694, 0.42857143, 0.48979592, 0.55102041,\n",
-       "       0.6122449 , 0.67346939, 0.73469388, 0.79591837, 0.85714286,\n",
-       "       0.91836735, 0.97959184, 1.04081633, 1.10204082, 1.16326531,\n",
-       "       1.2244898 , 1.28571429, 1.34693878, 1.40816327, 1.46938776,\n",
-       "       1.53061224, 1.59183673, 1.65306122, 1.71428571, 1.7755102 ,\n",
-       "       1.83673469, 1.89795918, 1.95918367, 2.02040816, 2.08163265,\n",
-       "       2.14285714, 2.20408163, 2.26530612, 2.32653061, 2.3877551 ,\n",
-       "       2.44897959, 2.51020408, 2.57142857, 2.63265306, 2.69387755,\n",
-       "       2.75510204, 2.81632653, 2.87755102, 2.93877551, 3.        ])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1087,13 +1067,477 @@
        "       [ 2.9792,  2.9184,  2.8576, ...,  0.1216,  0.0608,  0.    ]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(wave_freqs[:, None] - wave_freqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 47, 36)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forceRAO.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 0\n",
+    "x = 0\n",
+    "y = 0\n",
+    "\n",
+    "H = np.zeros((6, len(headings), len(wave_freqs), len(wave_freqs)))\n",
+    "Hp = np.zeros_like(H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heading_indx = np.array([np.argmin(np.abs(headings - a)) for a in angles])\n",
+    "freq_indx = np.array([np.argmin(np.abs(freqs - w)) for w in wave_freqs])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 36)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forceRAO[0, [freq_indx], :][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 50, 36)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vessel_specific_waveload._forceRAOphase.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50,)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel_angle = 0\n",
+    "heading_indx = np.argmin(angles - rel_angle)\n",
+    "vessel_specific_waveload._forceRAOamp[0, :, heading_indx].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rao_amp = vessel_specific_waveload._forceRAOamp[:, :, heading_indx]\n",
+    "rao_phase = vessel_specific_waveload._forceRAOphase[:, :, heading_indx]\n",
+    "rao_dof_1 = rao_amp[0]*np.cos(wave_freqs*t - phase - rao_phase[0])\n",
+    "rao_dof_2 = rao_amp[1]*np.cos(wave_freqs*t - phase - rao_phase[1])\n",
+    "rao_dof_3 = rao_amp[2]*np.cos(wave_freqs*t - phase - rao_phase[2])\n",
+    "rao_dof_4 = rao_amp[3]*np.cos(wave_freqs*t - phase - rao_phase[3])\n",
+    "rao_dof_5 = rao_amp[4]*np.cos(wave_freqs*t - phase - rao_phase[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rao = rao_amp*np.cos(wave_freqs*t - phase - rao_phase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(rao_dof_1 - rao[0]))\n",
+    "print(np.sum(rao_dof_2 - rao[1]))\n",
+    "print(np.sum(rao_dof_3 - rao[2]))\n",
+    "print(np.sum(rao_dof_4 - rao[3]))\n",
+    "print(np.sum(rao_dof_5 - rao[4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rao_dof_1 - rao[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5.64792119e+03 -7.81967117e-03  6.63425800e+04  1.60055959e-04\n",
+      "  1.75455571e+04 -1.10373808e-04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tau_wf = np.zeros(6)\n",
+    "for i in range(6):\n",
+    "    tau_wf[i] = amps@rao[i]\n",
+    "print(tau_wf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 36, 50, 50)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vessel_specific_waveload._Q.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qtest = vessel_specific_waveload._Q[:, 0, :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp6 = np.vstack([amps, amps, amps, amps, amps, amps])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 50, 6)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(qtest@amp6.T).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.38361557e+04+0.00000000e+00j,  5.11621934e-03+0.00000000e+00j,\n",
+       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
+       "        0.00000000e+00+0.00000000e+00j, -6.85002118e-04+5.42101086e-20j])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((vessel_specific_waveload._Q[:, 0, : ,:]*np.exp(1j*vessel_specific_waveload._W))@vessel_specific_waveload._amp)@vessel_specific_waveload._amp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.98860768e+03-4.54747351e-13j,  4.51850506e-04-4.06575815e-20j,\n",
+       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
+       "        0.00000000e+00+0.00000000e+00j, -7.74068034e-05-1.35525272e-20j])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(vessel_specific_waveload._amp@(vessel_specific_waveload._Q[:, 0, : ,:]*np.exp(1j*vessel_specific_waveload._W + 1j*vessel_specific_waveload._P))@vessel_specific_waveload._amp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time of second_order_loads: 0.0010\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.98860768e+03,  4.51850506e-04,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00, -7.74068034e-05])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vessel_specific_waveload.second_order_loads(1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = np.zeros((3, 3, 3))\n",
+    "aa[2, :, :] = np.ones((3, 3)) * np.arange(9).reshape(3,3)\n",
+    "bb = np.array([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,   0., 192.])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa@bb@bb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0.],\n",
+       "        [0., 0., 0.],\n",
+       "        [0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0.],\n",
+       "        [0., 0., 0.],\n",
+       "        [0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 1., 2.],\n",
+       "        [3., 4., 5.],\n",
+       "        [6., 7., 8.]]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau_sv = np.zeros(3)\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
+    "            tau_sv[i] += bb[i]*bb[j]*aa[i, j, k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau_sv = np.zeros(6)\n",
+    "for i in range(6):\n",
+    "    for j in range(N):\n",
+    "        for k in range(N):\n",
+    "            tau_sv[i] += amps[i]*amps[j]*qtest[i, j, k]*np.exp(1j*vessel_specific_waveload._P[i, j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.00028362,  0.        ,  0.        ,  0.        ,\n",
+       "       -0.00019713])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tau_sv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time of second_order_loads: 0.0010\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.06176884e+03,  6.14105906e-04,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00, -1.05303372e-04])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vessel_specific_waveload.second_order_loads(0, 0)"
    ]
   },
   {
