Minor changes in notebooks

--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -1406,146 +1406,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa = np.zeros((3, 3, 3))\n",
-    "aa[2, :, :] = np.ones((3, 3)) * np.arange(9).reshape(3,3)\n",
-    "bb = np.array([1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.,   0., 192.])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aa@bb@bb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 1., 2.],\n",
-       "        [3., 4., 5.],\n",
-       "        [6., 7., 8.]]])"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tau_sv = np.zeros(3)\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        for k in range(3):\n",
-    "            tau_sv[i] += bb[i]*bb[j]*aa[i, j, k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tau_sv = np.zeros(6)\n",
-    "for i in range(6):\n",
-    "    for j in range(N):\n",
-    "        for k in range(N):\n",
-    "            tau_sv[i] += amps[i]*amps[j]*qtest[i, j, k]*np.exp(1j*vessel_specific_waveload._P[i, j])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.        ,  0.00028362,  0.        ,  0.        ,  0.        ,\n",
-       "       -0.00019713])"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tau_sv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time of second_order_loads: 0.0010\n"
+      "Execution time of second_order_loads: 0.0010\n",
+      "[1.36424205e-12 1.08420217e-19 0.00000000e+00 0.00000000e+00\n",
+      " 0.00000000e+00 0.00000000e+00]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4.06176884e+03,  6.14105906e-04,  0.00000000e+00,  0.00000000e+00,\n",
-       "        0.00000000e+00, -1.05303372e-04])"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "vessel_specific_waveload.second_order_loads(0, 0)"
+    "tau_sv1 = np.zeros(6)\n",
+    "for i in range(6):\n",
+    "    for j in range(N):\n",
+    "        for k in range(N):\n",
+    "            tau_sv1[i] += np.real(amps[j]*amps[k]*qtest[i, j, k]*np.exp(1j*vessel_specific_waveload._P[j, k]))\n",
+    "\n",
+    "tau_sv2 = vessel_specific_waveload.second_order_loads(0, 0)\n",
+    "print(tau_sv1 - tau_sv2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
